# LolAR

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: ArucoTracker.hpp  CameraIntrinsics.hpp  CameraPoseEstimator.hpp  FloorDetector.hpp  Footstep.hpp  FootstepListener.hpp  LogLoader.hpp  Obstacle.hpp  PoseListener.hpp  StepPlannerLogEntry.hpp  StepPlannerLogReader.cpp  StepPlannerLogReader.hpp  VisionDataParser.hpp  VisionListener.hpp  sock_utils.hpp  utils.hpp
src/ArucoBoardGenerator/: main.cpp
src/LolaClient/: main.cpp
src/LolaListener/: main.cpp
src/LolaLogReader/: main.cpp
src/LolaPlayback/: main.cpp
src/MarkerTracker/: main.cpp
